--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+body{
+  font-family: "Nunito Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100,
+    "YTLC" 500;
+}
+
 .nunito-sans-regular {
     font-family: "Nunito Sans", sans-serif;
     font-optical-sizing: auto;
@@ -9,40 +19,24 @@
   }
 
   .nunito-sans-900 {
-    font-family: "Nunito Sans", sans-serif;
-    font-optical-sizing: auto;
+ 
     font-weight: 900;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100,
-      "YTLC" 500;
+  
   }
   .nunito-sans-700 {
-    font-family: "Nunito Sans", sans-serif;
-    font-optical-sizing: auto;
+  
     font-weight: 700;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100,
-      "YTLC" 500;
+   
   }
   .nunito-sans-600 {
-    font-family: "Nunito Sans", sans-serif;
-    font-optical-sizing: auto;
+
     font-weight: 600;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100,
-      "YTLC" 500;
+   
   }
   .nunito-sans-300 {
-    font-family: "Nunito Sans", sans-serif;
-    font-optical-sizing: auto;
+
     font-weight: 300;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100,
-      "YTLC" 500;
+  
   }
 
   .red{
