--- a/src/components/WorkTemplate.css
+++ b/src/components/WorkTemplate.css
@@ -15,3 +15,15 @@
     letter-spacing: 3px;
     color: #a0a0b4;
 }
+
+.work-template{
+    margin-bottom: -3%;
+}
+
+@media (max-width: 992px) {
+
+    .work-template{
+        margin-bottom: unset;
+        padding-bottom: 6%;
+    }
+  }
