--- a/src/index.css
+++ b/src/index.css
@@ -1,49 +1,41 @@
-body{
+body {
   font-family: "Nunito Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100,
-    "YTLC" 500;
+  font-variation-settings: "wdth" 100, "YTLC" 500;
 }
 
 .nunito-sans-regular {
-    font-family: "Nunito Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100,
-      "YTLC" 500;
-  }
-
-  .nunito-sans-900 {
- 
-    font-weight: 900;
-  
-  }
-  .nunito-sans-700 {
-  
-    font-weight: 700;
-   
-  }
-  .nunito-sans-600 {
-
-    font-weight: 600;
-   
-  }
-  .nunito-sans-300 {
-
-    font-weight: 300;
-  
-  }
-
-
-  .red{
-    color: red !important; 
+  font-family: "Nunito Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100, "YTLC" 500;
 }
 
-.white{
-    color: white !important; 
+.nunito-sans-900 {
+  font-weight: 900;
+}
+.nunito-sans-700 {
+  font-weight: 700;
+}
+.nunito-sans-600 {
+  font-weight: 600;
+}
+.nunito-sans-300 {
+  font-weight: 300;
+}
+.red {
+  color: red !important;
+}
+
+.white {
+  color: white !important;
+}
+
+.about-para{
+  line-height: 28.8px;
+  color: rgb(160, 160, 180);
+  font-size: 16px;
 }
