--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,46 +1,53 @@
 .design1,
-.design2 {
+.design2,
+.about-design1,
+.about-design2 {
   width: 100%;
   height: 7rem;
   background-color: white;
   position: relative;
 }
 .design1 {
-  transform: rotate(12deg) translate(-25px, -10px);
+  transform: rotate(12deg) translate(-25px, -20px);
 }
 .design2 {
-  transform: rotate(-12deg) translate(25px, -10px);
+  transform: rotate(-12deg) translate(25px, -20px);
+}
+.about-design1 {
+  transform: rotate(-12deg) translate(-25px, 20px);
+}
+.about-design2 {
+  transform: rotate(12deg) translate(25px, 20px);
 }
 .home-div {
   overflow: hidden;
 }
-.about-section {
-  position: relative;
+.get-estimate{
+  background-image: url("../../assets/images/bg_1.webp");
+  background-size: cover;
+  background-position: center;
+  padding: 3rem 2rem;
+  margin-bottom: 10rem;
+  width: 50%;
+ }
+ .estimate-heading {
+   font-size: 30px;
+ }
+ .estimated-div{
+   width: 45%;
+ 
+ }
+ .blog-section{
+  background-color: rgb(243, 243, 243);
+  padding: 10rem 0;
 }
-.about-img {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-}
-.about-heading {
-font-size: 30px;
-}
-
-.about-para{
-    line-height: 28.8px;
-    color: rgb(160, 160, 180);
-    font-size: 16px;
-}
-.about-thing-heading{
-  font-size: 50px;
-  line-height: 1;
-  color: #d1002c;
-}
-
-.about-thing-subheading {
-  font-size: 18px;
-  font-weight: 600;
-  letter-spacing: 2px;
-  line-height: 1.3;
-}
+ 
+ @media (max-width:992px ) {
+   .estimated-div{
+     width: unset;
+   }
+   .get-estimate{
+    width: 80%;
+   }
+ }
 
