added slide effect

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,14 @@
 .footer{
-    padding-top: 4rem;
+    padding: 5rem 0;
 }
 .ico-bg{
     width: 40px;
+}
+.questions{
+    gap: 2rem;
+}
+
+.foot-head{
+    font-size: 18px;
+    font-weight: 700;
 }
