--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,53 +1,4 @@
-.design1,
-.design2,
-.about-design1,
-.about-design2 {
-  width: 100%;
-  height: 7rem;
-  background-color: white;
-  position: relative;
-}
-.design1 {
-  transform: rotate(12deg) translate(-25px, -20px);
-}
-.design2 {
-  transform: rotate(-12deg) translate(25px, -20px);
-}
-.about-design1 {
-  transform: rotate(-12deg) translate(-25px, 20px);
-}
-.about-design2 {
-  transform: rotate(12deg) translate(25px, 20px);
-}
-.home-div {
-  overflow: hidden;
-}
-.get-estimate{
-  background-image: url("../../assets/images/bg_1.webp");
-  background-size: cover;
-  background-position: center;
-  padding: 3rem 2rem;
-  margin-bottom: 10rem;
-  width: 50%;
- }
- .estimate-heading {
-   font-size: 30px;
- }
- .estimated-div{
-   width: 45%;
- 
- }
- .blog-section{
-  background-color: rgb(243, 243, 243);
-  padding: 10rem 0;
-}
- 
- @media (max-width:992px ) {
-   .estimated-div{
-     width: unset;
-   }
-   .get-estimate{
-    width: 80%;
-   }
- }
-
+.work-section{
+    background-color: rgb(243, 243, 243);
+    padding: 10rem 0;
+  }
