--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,37 @@ body {
   color: rgb(160, 160, 180);
   font-size: 16px;
 }
+
+.design1,
+.design2,
+.about-design1,
+.about-design2 {
+  width: 100%;
+  height: 7rem;
+  background-color: white;
+  position: relative;
+}
+.design1 {
+  transform: rotate(12deg) translate(-25px, -20px);
+}
+.design2 {
+  transform: rotate(-12deg) translate(25px, -20px);
+}
+.about-design1 {
+  transform: rotate(-12deg) translate(-25px, 20px);
+}
+.about-design2 {
+  transform: rotate(12deg) translate(25px, 20px);
+}
+.pagination div{
+  border: 1px solid gainsboro;
+  border-radius: 50%;
+  padding-top: 0.5rem;
+  width: 40px;
+  height: 40px;
+}
+.pagination div:hover{
+  background-color:  #d1002c;;
+  color: white;
+  cursor: pointer;
+}
